2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add finite power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finite-power8.S: New file:
	POWER8 finite ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finite.c (__finite): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_finitef.c (__finitef):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_finite.S: New file:
	POWER8 finite implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_finitef.S: New file.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add isinf power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinf-power8.S: New file:
	POWER8 isinf ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinf.c (__isinf): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isinff.c (__isinff):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isinf.S: New file:
	POWER8 isinf implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isinff.S: New file.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/init-arch.h (INIT_ARCH):
	Add hwcap2 initialization.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add isnan power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isnan-power8.S: New file:
	POWER8 isnan ifunc implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isnan.c (__isnan): Add
	POWER8 implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_isnanf.c (__isnanf):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isnan.S: New file:
	POWER8 isnan implementation.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isnanf.S: New file.

2014-02-27  Joey Ye  <joey.ye@arm.com>

	* sysdeps/arm/soft-fp/sfp-machine.h (_FP_NANFRAC_S, _FP_NANFRAC_D)
	(_FP_NANFRAC_Q): Set to zero.
